added stub for get_url

--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -6,5 +6,6 @@
     <strong>title:</strong> {{ title }} <br />
     <strong>url:</strong> {{ url }} <br />
     <strong>selected:</strong> {{ selected }} <br />
+    <strong>movie_title:</strong> {{ movie_title }} <br />
   </body>
 </html>
