updated stub and template

--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -7,5 +7,6 @@
     <strong>url:</strong> {{ url }} <br />
     <strong>selected:</strong> {{ selected }} <br />
     <strong>movie_title:</strong> {{ movie_title }} <br />
+    <strong>movie_upc:</strong> {{ movie_upc }} <br />
   </body>
 </html>
