Added a stub search method for zip.ca.

--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -8,5 +8,6 @@
     <strong>selected:</strong> {{ selected }} <br />
     <strong>movie_title:</strong> {{ movie_title }} <br />
     <strong>movie_upc:</strong> {{ movie_upc }} <br />
+    <strong>title_id:</strong> {{ title_id }} <br />
   </body>
 </html>
