styling.  tiger blood.

--- a/sparkle-hackwat/index.html
+++ b/sparkle-hackwat/index.html
@@ -1,16 +1,38 @@
-<html>
-  <head>
-    <title>HackWat - ZipAssit</title>
-  </head>
-  <body>
-    <a href="javascript:{{ bookmarklet }}">test</a>
+<!doctype html>
 
-    <div>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed lacus vitae risus ultricies pharetra. In hac habitasse platea dictumst. Nunc scelerisque, turpis vitae vehicula feugiat, dolor leo mollis eros, at feugiat massa velit eget dolor. In venenatis aliquet sem, eget semper ante fringilla a. Nam fringilla lacus hendrerit odio tempor pellentesque. Donec consectetur nisi scelerisque massa placerat pretium. Duis volutpat, lectus non pharetra feugiat, lorem tellus convallis arcu, at iaculis lorem sem eu ligula. Fusce pulvinar sollicitudin dui, at elementum ante aliquam sit amet. Suspendisse diam dui, convallis nec vulputate vel, auctor a leo. Suspendisse posuere, nulla a imperdiet semper, lacus augue blandit turpis, nec cursus leo dui et augue. Nullam interdum, dui quis consequat laoreet, metus lorem pulvinar mauris, et vulputate tellus magna nec sapien. Morbi eget sagittis ipsum. Proin scelerisque porttitor tempus. Quisque in velit adipiscing nulla blandit viverra sed vitae nisl. Pellentesque nec ultricies tellus. Proin eleifend arcu a quam vestibulum at laoreet nisl iaculis. Duis lacus eros, mattis vitae pulvinar ut, hendrerit nec elit.
-    </div>
+<head>
+<meta charset="utf-8">
 
-    <div>
-In id odio sed augue gravida ornare. Nunc non sodales leo. Mauris vel ligula vitae risus hendrerit mattis nec id nulla. Nullam elementum suscipit nibh, a accumsan dui luctus nec. Sed eget turpis a ante imperdiet condimentum et at metus. Suspendisse at neque purus, scelerisque accumsan dui. Nunc purus ante, aliquam a volutpat bibendum, tincidunt et ipsum. Vestibulum a sollicitudin justo. Nullam eget nisl ac lorem adipiscing bibendum nec eu est. Aliquam gravida nisi sit amet tortor congue at pharetra massa eleifend. Etiam elementum, est eu dignissim tristique, enim ipsum placerat tortor, a tincidunt erat erat at est. Nam aliquet molestie lectus id porttitor. Nam non dui eget nibh consequat vulputate sit amet vitae mauris.
-    </div>
-  </body>
-</html>
+<head>
+
+<title>ZipAssist -- HackWaterloo Team Sparkle</title>
+
+<link href="zipassist.css" rel="stylesheet" type="text/css">
+<style>
+
+</style>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+
+<script language="javascript">
+
+</script>
+
+</head>
+
+<body>
+
+<div id="content">
+	<img src="img/logo.jpg" alt="Robot Logo"></img>
+
+	<div id="bookmarklet">
+		<span>Drag me to your URL bar: </span>
+		<a href="javascript:{{ bookmarklet }}">ZipAssist</a>
+	</div>
+
+	<div id="description_top">Oh, what do we do?</div>
+	<div id="description_mid">Lightning fast access to your ziplist (zip.ca) from IMDB, Rotten Tomatoes, or other pages.</div>
+	<div id="description_bot">We give you tiger blood.  You're welcome.</div>
+<div>
+
+</body>
