styling for the manage page

--- a/sparkle-hackwat/index.html
+++ b/sparkle-hackwat/index.html
@@ -26,12 +26,12 @@
 	<img src="img/logo.jpg" alt="Robot Logo"></img>
 
 	<div id="bookmarklet">
-		<span>Drag me to your URL bar: </span>
+		<span>Drag this bookmarklet to your URL bar: </span>
 		<a href="javascript:{{ bookmarklet }}">ZipAssist</a>
 	</div>
 
-	<div id="description_top">Oh, what do we do?</div>
-	<div id="description_mid">Lightning fast access to your ziplist (zip.ca) from IMDB, Rotten Tomatoes, or other pages.</div>
+	<div id="description_top">Oh, what is it we do?</div>
+	<div id="description_mid">One click access to your zip.ca ziplist directly from IMDB, Rotten Tomatoes, etc.</div>
 	<div id="description_bot">We give you tiger blood.  You're welcome.</div>
 <div>
 
