--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -1,13 +1,50 @@
-<html>
-  <head>
-    <title>HackWat - ZipAssit</title>
-  </head>
-  <body>
-    <strong>title:</strong> {{ title }} <br />
-    <strong>url:</strong> {{ url }} <br />
-    <strong>selected:</strong> {{ selected }} <br />
-    <strong>movie_title:</strong> {{ movie_title }} <br />
-    <strong>movie_upc:</strong> {{ movie_upc }} <br />
-    <strong>title_id:</strong> {{ title_id }} <br />
-  </body>
-</html>
+
+<!doctype html>
+
+<head>
+<meta charset="utf-8">
+
+<head>
+
+<title>ZipAssist -- HackWaterloo Team Sparkle</title>
+
+<link href="zipassist.css" rel="stylesheet" type="text/css">
+<style>
+
+</style>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+
+<script language="javascript">
+
+</script>
+
+</head>
+
+<body>
+
+<!--
+		{{ url }}
+		{{ title }}
+		{{ selected }}
+		{{ movie_title }}
+		{{ movie_upc }}
+		{{ zipdata }}
+-->
+
+<div id="content">
+	<img src="http://images.zip.ca/large/188668.jpg'" alt="Movie Image"></img>
+
+	<div id="zipassist">
+		<div id="ziptitle">Night of the Living Dorks (Die Nacht der lebenden Loser)</div>
+		<div id="zipreleaseyear">[<span>2004</span>] --</div>
+		<div id="zipcats">
+			<span>Comedy</span> | <span>Foreign Language & Int'l</span> | <span>Horror</span>
+		</div>
+		<div id="ziplink">
+			<a href="http://hackott.zip.ca/catalog/title/3057654">Zip Link</a>
+		</div>
+	</div>
+<div>
+
+</body>
