--- a/sparkle-hackwat/index.html
+++ b/sparkle-hackwat/index.html
@@ -7,7 +7,7 @@
 
 <title>ZipAssist -- HackWaterloo Team Sparkle</title>
 
-<link href="zipassist.css" rel="stylesheet" type="text/css">
+<link href="/css/zipassist.css" rel="stylesheet" type="text/css">
 <style>
 
 </style>
