--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -8,7 +8,7 @@
 
 <title>ZipAssist -- HackWaterloo Team Sparkle</title>
 
-<link href="zipassist.css" rel="stylesheet" type="text/css">
+<link href="/css/zipassist.css" rel="stylesheet" type="text/css">
 <style>
 
 </style>
