--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -33,10 +33,11 @@
 -->
 
 <div id="content">
-	<img src="http://images.zip.ca/large/188668.jpg'" alt="Movie Image"></img>
+	<img src="http://images.zip.ca/large/188668.jpg" alt="Movie Image"></img>
 
 	<div id="zipassist">
 		<div id="ziptitle">Night of the Living Dorks (Die Nacht der lebenden Loser)</div>
+		<div id="ziprating"><meter min="0" max="5" low="2" high="4" optimum="5" value="3.36"></div>
 		<div id="zipreleaseyear">[<span>2004</span>] --</div>
 		<div id="zipcats">
 			<span>Comedy</span> | <span>Foreign Language & Int'l</span> | <span>Horror</span>
