adding error for manage

--- a/sparkle-hackwat/index.html
+++ b/sparkle-hackwat/index.html
@@ -23,7 +23,7 @@
 <body>
 
 <div id="content">
-	<img src="img/logo.jpg" alt="Robot Logo"></img>
+	<img src="/img/logo.jpg" alt="Robot Logo"></img>
 
 	<div id="bookmarklet">
 		<span>Drag this bookmarklet to your URL bar: </span>
