--- a/sparkle-hackwat/manage_error.html
+++ b/sparkle-hackwat/manage_error.html
@@ -23,21 +23,12 @@
 
 <body>
 
-<!--
-		{{ url }}
-		{{ title }}
-		{{ selected }}
-		{{ movie_title }}
-		{{ movie_upc }}
-		{{ zipdata }}
--->
-
 <div id="content">
 	<img src="/img/logo_sad.jpg" alt="Sad Robot Logo"></img>
 
 	<div id="error_content">
 		<div id="appology_top">Oh Noes!</div>
-		<div id="appology_mid">We were not able to find your movie title: TITLE</div>
+		<div id="appology_mid">We were not able to find your movie title: {{movie_title}}</div>
 		<div id="appology_bot">Sorry, Tiger Blood Fail!</div>
 	</div>
 <div>
