--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -24,7 +24,7 @@
 <body>
 
 <div id="content">
-	<img src="http://images.zip.ca/large/188668.jpg" alt="Movie Image"></img>
+	<img src="{{zipdata.CoverArt.Large}}" alt="Movie Image"></img>
 
 	<div id="zipassist">
 		<div id="ziptitle">{{zipdata.Title.Regular}}</div>
