google im fealing lucky, thank you very much

--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <head>
@@ -36,7 +35,9 @@
 			{% endfor %}
 		</div>
 		<div id="ziplink">
-			<a href="{{zipdata.Id}}">Zip Link</a>
+			<!--<a href="{{zipdata.Id}}">Zip Link</a>-->
+			<a href="http://www.google.com/search?hl=en&source=hp&biw=1920&bih=1062&q={{zipdata.Title.Regular}} IMDB&btnI=I%27m+Feeling+Lucky&aq=f&aqi=&aql=&oq=">IMDB</a>
+			<a href="http://www.google.com/search?hl=en&source=hp&biw=1920&bih=1062&q={{zipdata.Title.Regular}} ROTTEN TOMATOES&btnI=I%27m+Feeling+Lucky&aq=f&aqi=&aql=&oq=">Rotten Tomatoes</a>
 		</div>
 	</div>
 <div>
