--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -16,6 +16,13 @@
 
 <script language="javascript">
 
+$(document).ready(function() {
+	var url = '{{url}}';
+	$.getJSON('http://api.postrank.com/v2/entry/metrics?appkey=hackwaterloo&id=' + url, function (jsondata) {
+		$("#postranks").text(jsondata);
+	});
+});
+
 </script>
 
 </head>
@@ -27,6 +34,7 @@
 
 	<div id="zipassist">
 		<div id="ziptitle">{{zipdata.Title.Regular}}</div>
+		<div id="postranks"></div>
 		<div id="ziprating"><meter min="0" max="5" low="2" high="4" optimum="5" value="{{zipdata.ZipRating}}"></meter>{{zipdata.ZipRating}}</div>
 		<div id="zipreleaseyear">[<span>{{zipdata.ReleaseYear}}</span>]</div>
 		<div id="zipcats">
