--- a/sparkle-hackwat/manage.html
+++ b/sparkle-hackwat/manage.html
@@ -21,16 +21,16 @@ $(document).ready(function() {
 	var url = '{{url}}';
 	$.getJSON('http://api.postrank.com/v2/entry/metrics?appkey=hackwaterloo&callback=?&id=' + url, function (jsondata) {
 		var prmetrics = jsondata['{{url}}'];
-		var prtext = "";
 
 		for (var key in prmetrics) {
-			prtext += key;
-			prtext += ' = ';
-			prtext += prmetrics[key];
-			prtext += ' | ';
+			$("#postranks").append(
+				$('<span/>').addClass('postrank_metric').addClass(key);
+			).append(
+				$('<span/>').text(prmetrics[key])
+			);
 		}
 
-		$("#postranks").text(prtext);
+		$("#postranks").html();
 	});
 });
 
